@@ -166,6 +166,11 @@ IN DEVELOPMENT
    * Reduce selftest overhead to establish test names by memoization.
      (Vincent Ladeuil)
 
+   * Repository has a new method ``has_revisions`` which signals the presence
+     of many revisions by returning a set of the revisions listed which are
+     present. This can be done by index queries without reading data for parent
+     revision names etc. (Robert Collins)
+
   API BREAKS:
 
   TESTING:
